[package]
name = "bevy_template"
version = "0.1.0"
authors = ["yopox <yopoxdev@gmail.com>"]
description = ""
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bevy = { version = "0.10", default-features = false, features = ["bevy_asset", "bevy_winit", "png", "x11"] }
bevy_asset_loader = { version = "0.16", default-features = false, features = ["2d"] }
bevy_common_assets = { version = "0.6", features = ["ron"] }
bevy_text_mode = "0.1.1"
bevy_tweening = "0.7"

lazy_static = "1.4"
strum = "0.24"
strum_macros = "0.24"

rand = { version = "0.8", features = ["alloc"]}